@@ -1,3 +1,7 @@
+2010-05-25  6.6.2.1 Anthony Thyssen <A.Thyssen@griffith...>
+  * Finish for Square Array Rotates (off center origin rotate)
+  * Added HitAndMiss kernel Ridges2 to find 2 pixel thick ridges
+
 2010-05-24  6.6.2-1 Cristy  <quetzlzacatenango@image...>
   * Respect density when rendering SVG images.
   * Set AVI handler to the MPEG coder.
